# rl-nethack

./: .env.example  .gitignore  ALIGNMENT-IMPLEMENTATION-REPORT-2026-04-05.md  ALIGNMENT-IMPROVEMENT-PLAN.md  APPO-OPTIONS-OVERHAUL.md  BEHAVIOR-REG-IMPROVEMENT.md  CODEX-AGENT-MISSION-PROMPT.md  CURRENT-RL-SYSTEM.md  FAST-DEBUG-LOOP-REPORT-2026-04-05.md  FAST-ITERATION-PLAN.md  FAST-RL-EXECUTION-PLAN-2026-04-05.md  FAST-RL-UPGRADE-PLAN-2026-04-05.md  HANDOFF.md  IMPLEMENTATION-PLAN.md  LONG-BOOTSTRAP-SMOKE-RESULTS-2026-04-16.md  LONG-CONTEXT-NLD-TRAINING-RESULTS-2026-04-16.md  LONG-CONTEXT-QWEN-1M-PLAN-2026-04-16.md  LONG-SPAN-INFERENCE-VALIDATION-RESULTS-2026-04-16.md  MAESTROMOTIF-INTEGRATION.md  NEXT-STEPS-WORLD-MODEL-PLAN-2026-04-16.md  PLAN-PROXY-REWARD-OVERHAUL-2026-04-06.md  PLAN.md  POSTMORTEM-NEXT-STEPS-2026-04-05.md  README.md  REBUILT-CANONICAL-NLD-32K-FULLSIZE-VALIDATION-RESULTS-2026-04-16.md  REPORT-BEHAVIOR-REG-2026-04-06.md  REPORT-LLM-WORLD-MODEL-2026-04-06.md  REPORT-PROXY-REWARD-OVERHAUL-2026-04-06.md  REPORT-SEQUENCE-WORLD-MODEL-2026-04-16.md  REPORT-TWO-OPTIONS-2026-04-06.md  REPORT-WORLD-MODEL-ENSEMBLE-DISTILL-2026-04-06.md  REPORT-WORLD-MODEL-SCALING-2026-04-06.md  RESEARCH-NOTES-NETHACK-HORIZONS.md  RL-APPO-HANDOFF.md  RL-HARNESS-TASKS.md  ROLLING-RESEARCH-THESIS.md  RUN-REPORT-2026-04-05-FAST-LOOP-VALIDATION.md  RUN-REPORT-2026-04-05-V2-BC-APPO.md  RUN-REPORT-2026-04-05-X10-VALIDATE.md  RUN-REPORT-2026-04-05-X100-TEACHER-REG-COMPARISON.md  (+24 more)
autoascend_traces/: Dockerfile.light  fix_env_wrapper_gym_compat.patch  patch_nle.py  requirements.light.txt  (+2 more)
(+200 files in other folders)
