[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rl-nethack"
version = "0.1.0"
description = "NetHack RL research, data generation, reporting, and LoRA training"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.26",
  "nle>=0.9.0",
]

[project.optional-dependencies]
test = [
  "datasets>=2.18.0",
  "pytest>=8.0",
]
train = [
  "accelerate>=1.0.0",
  "peft>=0.13.0",
  "torch>=2.4.0",
  "transformers>=4.45.0",
  "trl>=0.11.0",
  "unsloth>=2025.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.uv]
package = false
